--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <i class="fa fa-2x fa-envelope-open text-primary mr-3"></i>
                         <div class="d-flex flex-column">
                             <h5 class="font-weight-bold">Email Us</h5>
-                            <a href="https://gmail.com" class="m-0">ngandocompany@gmail.com</a>
+                            <a href="mailto:ngandocompany@gmail.com" class="m-0">ngandocompany@gmail.com</a>
                         </div>
                     </div>
                 </div>
@@ -146,8 +146,8 @@
                     <div class="d-flex align-items-center border mb-4 mb-lg-0 p-4" style="height: 120px;">
                         <i class="fas fa-2x fa-phone-alt text-primary mr-3"></i>
                         <div class="d-flex flex-column">
-                            <h5 class="font-weight-bold">Call Us</h5>
-                            <a href="https://call.com" class="m-0">+254 735499623</a>
+                            <h5 class="font-weight-bold">Click to Call Us</h5>
+                            <a href="tel:+254735499623" class="m-0">+254 735499623</a>
                         </div>
                     </div>
                 </div>
